@@ -1,3 +1,9 @@
+2002-09-24  Peter Osterlund  <petero2@telia.com>
+
+	* (p4-font-lock-buffer): Fixed problem with delays when pressing
+	  C-l caused by hilit19 unnecessarily trying to rehighlight the
+	  buffer.
+
 2002-09-23  Peter Osterlund  <petero2@telia.com>
 
 	* (p4-font-lock-buffer): New function. Colorize a buffer using
